--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vueblog2?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/broblog?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=1991811
 mybatis.config-location=classpath:/mybatis-config.xml
