--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://db-blog-1.czm7bb7qeto8.ap-northeast-2.rds.amazonaws.com:3306/vueblog2?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://db-blog-1.czm7bb7qeto8.ap-northeast-2.rds.amazonaws.com:3306/broblog?characterEncoding=UTF-8
 spring.datasource.username=dreambai
 spring.datasource.password=dreambaiai
 mybatis.config-location=classpath:/mybatis-config.xml
